Source/WebCore/dom/Document.h
@@ -1368,6 +1368,7 @@ public:
     RefPtr<IntersectionObserver> removeIntersectionObserver(IntersectionObserver&);
     unsigned numberOfIntersectionObservers() const { return m_intersectionObservers.size(); }
     void updateIntersectionObservations();
+    void scheduleIntersectionObservationUpdate();
 #endif
 
 #if ENABLE(MEDIA_STREAM)
@@ -1775,6 +1776,10 @@ private:
 #if ENABLE(INTERSECTION_OBSERVER)
     Vector<RefPtr<IntersectionObserver>> m_intersectionObservers;
     Vector<WeakPtr<IntersectionObserver>> m_intersectionObserversWithPendingNotifications;
+
+    // FIXME: Schedule intersection observation updates in a way that fits into the HTML
+    // EventLoop. See https://bugs.webkit.org/show_bug.cgi?id=160711.
+    Timer m_intersectionObservationUpdateTimer;
     Timer m_intersectionObserversNotifyTimer;
 #endif
 
@@ -1960,6 +1965,10 @@ private:
 
 #if ENABLE(TELEPHONE_NUMBER_DETECTION)
     bool m_isTelephoneNumberParsingAllowed { true };
+#endif
+
+#if ENABLE(INTERSECTION_OBSERVER)
+    bool m_needsIntersectionObservationUpdate { false };
 #endif
 
 #if ENABLE(MEDIA_STREAM)
